# voicers

./: .envrc  .gitignore  Cargo.toml  README.md  TUI_PLAN.md  alice.sh  bob.sh  flake.nix  shell.nix
.direnv/: nix-profile-pre941499.ae67888ff7ef  nix-profile-pre941499.ae67888ff7ef.rc
archive/legacy-prototype/: README.md
crates/voicers/: Cargo.toml
crates/voicers-core/: Cargo.toml
crates/voicers-core/src/: lib.rs
crates/voicers/src/: client.rs  main.rs
crates/voicers/src/ui/: mod.rs  model.rs  theme.rs
crates/voicersd/: Cargo.toml
crates/voicersd/src/: app.rs  audio_backend.rs  cli.rs  control.rs  lib.rs  main.rs  media.rs  network.rs  persist.rs  webrtc_transport.rs
crates/voicersd/src/app/: peer_book.rs  state.rs
crates/voicersd/src/media/: dsp.rs  jitter.rs
crates/voicersd/src/network/: invite.rs  media_transport.rs  session.rs  stun.rs  swarm_events.rs
crates/voicersd/tests/: control_ipc.rs  network_integration.rs
crates/voicersd/tests/common/: mod.rs
docs/: p2p-daemon-plan.md  rooms-roles-plan.md
src/: main.rs  peer.rs  server.rs  speaker.rs  voice.rs  w.code-workspace
