[package]
name = "voice"
version = "0.1.0"
authors = ["Aidan Chelig <aidan.chelig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cpal = "0.11.0"
anyhow = "1.0.26"
hound = "3.4.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.0"
tokio-util = { version = "0.2.0", features = ["full"] }
audiopus = "0.2"