[package]
name = "voicers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
voicers-core = { path = "../voicers-core" }
