[package]
name = "voicersd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
audiopus.workspace = true
audiopus_sys.workspace = true
cpal.workspace = true
futures.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
voicers-core = { path = "../voicers-core" }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire.workspace = true
